--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">{{ site.title | page.title | default: site.github.repository_name }}</h1>
+      <h2 class="project-tagline">{{ site.description | page.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         {% unless site.buttons.github_hide %}
           <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
