--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <h2 class="project-tagline">{{ site.description | page.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         {% unless site.buttons.github_hide %}
-          <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+          <a href="{{ site.github.repository_url }}" class="btn">Code on GitHub</a>
         {% endunless %}
       {% endif %}
       {% if site.show_downloads %}
