--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,10 @@ $hr-border-color: #eff0f1 !default;
 
 @import 'jekyll-theme-cayman';
 
+.main-content {
+  @include large { max-width: 85%; }
+}
+
 {% if site.logo_url %}
 .project-name::before {
     content: " ";
@@ -68,17 +72,58 @@ $hr-border-color: #eff0f1 !default;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-.btn-outline-primary {
+.btn-outline-ps {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-outline-ps:hover {
     color: #007bff;
     background-color: transparent;
     background-image: none;
     border-color: #007bff;
-}
-
-.btn-outline-primary:hover {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
     text-decoration:none;
     font-weight:none
 }
+
+.btn-outline-pr {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+.btn-outline-pr:hover {
+    color: #28a745;
+    background-color: transparent;
+    background-image: none;
+    border-color: #28a745;
+    text-decoration:none;
+    font-weight:none
+}
+
+.btn-outline-psd {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+
+.btn-outline-psd:hover {
+    color: #dc3545;
+    background-color: transparent;
+    background-image: none;
+    border-color: #dc3545;
+    text-decoration:none;
+    font-weight:none
+}
+
+.column-left {
+  float: left;
+  width: 50%;
+}
+.column-right {
+  float: right;
+  width: 50%;
+}
+
+
