--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -126,4 +126,13 @@ $hr-border-color: #eff0f1 !default;
   width: 50%;
 }
 
+.page-header {
+    padding: 2rem 3rem;
+}
+
+.intro-header {
+    margin-top: 5rem;
+}
+
+
 
